tools/tests/ui/fail/l1054.cnf
// Test file for error code: L1054
// Expected error: Overflow Underflow character in indentation -- expected valid UTF-8 encoding
// Category: Syntax
// Layer: 1 (Lexer)

IDENTIFICATION DIVISION.
    PROGRAM "test-overflow".
EVIRONMENT DIVISION.
    OS "invalid™utf8-chars".
